--- a/sites/site_1/intended/configs/s1-leaf1.cfg
+++ b/sites/site_1/intended/configs/s1-leaf1.cfg
@@ -28,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$5EY3UVNTcL2BvjDY$hnn.8iNpg5qV9HlZHkjBUlz3nRHgoTPr2.hyy3d.OMZswnx8ajFjvcNXtsjD5QrkOAU3VQLtWhIQGTeu7hf4M1
+username arista privilege 15 role network-admin secret sha512 $6$6CHFbJXfv3ZYGz.a$XbjiIxgQY7Mun3ZNuPqZlwftkw6IAvzLfFT88faF12U6sVoS2CkEMoAszry.8NkZd.QhlvTO1kNVIZONH/JOD.
 !
 vlan 10
    name Ten
