--- a/sites/site_1/intended/configs/s1-leaf4.cfg
+++ b/sites/site_1/intended/configs/s1-leaf4.cfg
@@ -28,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$.ARuh6tODwAuGtZ2$UcbcoKWLN9w0bbUiG6LXG0lWOMz6Ll.yqzCKXG.MUu7nbjzauUYmmf9uQhdCOAliN.67IOZvXpQ8bb5Yzak0x/
+username arista privilege 15 role network-admin secret sha512 $6$3aFmIixA22hm6nu1$sA/9kdFBe8M7DureuU.s9yD95B1jmjyDQg7r8Lt44xsPw5wW83ZeneFkZ5l8VueNNpS.0b8KoRz1COa2JFDH4/
 !
 vlan 20
    name Twenty
