--- a/sites/site_1/intended/configs/s1-spine1.cfg
+++ b/sites/site_1/intended/configs/s1-spine1.cfg
@@ -28,7 +28,7 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$zrOpONRJ8GuIBAPQ$zC1uhMZY.InoR7fENbv89lrEytxt3SZXKwXrEWySyhh/j.eIVN9JnvoXxCxyazaPmEJp/RWdAF3gYabfEw5jv0
+username arista privilege 15 role network-admin secret sha512 $6$IHUNSzgAljgElyM4$oN..zl68Pa2vU1eUlP50fE5MF6vqfhhS3ectjxTMr/o.c8CRVlbTEksrQQQpl9GR25CA6JUV0av6mWEFsLv4n.
 !
 vlan 10
    name Ten
