--- a/sites/site_1/config_backup/s1-leaf4_post_running-config.conf
+++ b/sites/site_1/config_backup/s1-leaf4_post_running-config.conf
@@ -3,7 +3,7 @@
 !
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$5QM8AC2G0NQVJm4z$TV5KOj9C.aOy3s4jDsGwo4Ba8yqgEvbnu2rcoTWFG28zW1UbSjbWUsW.XkEa8MVkn2WctDTuJGQJP6cjWfVaV.
+username arista privilege 15 role network-admin secret sha512 $6$.ARuh6tODwAuGtZ2$UcbcoKWLN9w0bbUiG6LXG0lWOMz6Ll.yqzCKXG.MUu7nbjzauUYmmf9uQhdCOAliN.67IOZvXpQ8bb5Yzak0x/
 !
 daemon TerminAttr
    exec /usr/bin/TerminAttr -cvaddr=192.168.0.5:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
@@ -14,6 +14,10 @@ vlan internal order ascending range 1006 1199
 transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
+!
+logging host 10.200.0.108
+logging host 10.200.1.108
+logging source-interface Management0
 !
 hostname s1-leaf4
 dns domain atd.lab
@@ -28,6 +32,10 @@ vlan 20
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
 !
 management api http-commands
    no shutdown
