--- a/sites/site_2/config_backup/s2-leaf1_post_running-config.conf
+++ b/sites/site_2/config_backup/s2-leaf1_post_running-config.conf
@@ -3,7 +3,7 @@
 !
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$.lQG6ggi0VtxJQ0e$UMjgQlksE2463/3QUhTwbRyzsA/8LzA6Z1.GqfB2l.LZEmNCEALLGJRMwVvLAt5044UKvYvN6If/M9v93qG.w.
+username arista privilege 15 role network-admin secret sha512 $6$oDu.QRv9e51s.7ls$PhBPv/W//6kokUuof1cosA7y1iHO2CsOhEcEz/YzmZiZ.WqjnDsIa6Evh5RB02gJviSUDqDcpWxXwQ3lxzzhs.
 !
 daemon TerminAttr
    exec /usr/bin/TerminAttr -cvaddr=192.168.0.5:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
@@ -14,6 +14,10 @@ vlan internal order ascending range 1006 1199
 transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
+!
+logging host 10.200.0.108
+logging host 10.200.1.108
+logging source-interface Management0
 !
 hostname s2-leaf1
 dns domain atd.lab
@@ -28,6 +32,10 @@ vlan 30
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
+!
+banner motd
+You shall not pass. Unless you are authorized. Then you shall pass.
+EOF
 !
 management api http-commands
    no shutdown
